; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_output.c_outd.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_output.c_outd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i64, i32*, i8*)* @outd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @outd(i64 %0, i32* %1, i8* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i64, align 8
  %8 = alloca [25 x i8], align 16
  %9 = alloca i8*, align 8
  store i64 %0, i64* %4, align 8
  store i32* %1, i32** %5, align 8
  store i8* %2, i8** %6, align 8
  %10 = getelementptr inbounds [25 x i8], [25 x i8]* %8, i64 0, i64 0
  %11 = getelementptr inbounds i8, i8* %10, i64 25
  store i8* %11, i8** %9, align 8
  %12 = load i8*, i8** %9, align 8
  %13 = getelementptr inbounds i8, i8* %12, i32 -1
  store i8* %13, i8** %9, align 8
  store i8 0, i8* %13, align 1
  %14 = load i64, i64* %4, align 8
  %15 = icmp slt i64 %14, 0
  br i1 %15, label %16, label %19

16:                                               ; preds = %3
  %17 = load i64, i64* %4, align 8
  %18 = sub nsw i64 0, %17
  store i64 %18, i64* %7, align 8
  br label %21

19:                                               ; preds = %3
  %20 = load i64, i64* %4, align 8
  store i64 %20, i64* %7, align 8
  br label %21

21:                                               ; preds = %19, %16
  br label %22

22:                                               ; preds = %29, %21
  %23 = load i64, i64* %7, align 8
  %24 = urem i64 %23, 10
  %25 = add i64 %24, 48
  %26 = trunc i64 %25 to i8
  %27 = load i8*, i8** %9, align 8
  %28 = getelementptr inbounds i8, i8* %27, i32 -1
  store i8* %28, i8** %9, align 8
  store i8 %26, i8* %28, align 1
  br label %29

29:                                               ; preds = %22
  %30 = load i64, i64* %7, align 8
  %31 = udiv i64 %30, 10
  store i64 %31, i64* %7, align 8
  %32 = icmp ne i64 %31, 0
  br i1 %32, label %22, label %33

33:                                               ; preds = %29
  %34 = load i64, i64* %4, align 8
  %35 = icmp slt i64 %34, 0
  br i1 %35, label %36, label %39

36:                                               ; preds = %33
  %37 = load i8*, i8** %9, align 8
  %38 = getelementptr inbounds i8, i8* %37, i32 -1
  store i8* %38, i8** %9, align 8
  store i8 45, i8* %38, align 1
  br label %39

39:                                               ; preds = %36, %33
  %40 = load i8*, i8** %9, align 8
  %41 = load i32*, i32** %5, align 8
  %42 = load i8*, i8** %6, align 8
  %43 = call i8* @outs(i8* %40, i32* %41, i8* %42)
  ret i8* %43
}

declare dso_local i8* @outs(i8*, i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
